# stock-news-llm-scripts

./: .gitignore  README.md  config-template.toml  pyproject.toml
embeddings/: embedding_calc.py  embedding_pb2.py  embedding_pb2_grpc.py
feature_extractor/: extractor_pipelines.py  feature_extract.py  field_structure_definitions.py  llm_providers.py  raw_html_reading.py
interfaces/: ohlc_downloader.py
ohlc_downloader/: ohlc_downloaders.py
scripts/: calc_summary_embeddings.py  download_ohlc_data.py  feature_extractor_script.py  mongo_cloner_script.py  mongo_data_post_script.py
